--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 
-
-
 * {
   margin: 0;
   padding: 0;
@@ -16,8 +14,6 @@ body {
   height: 100vh;
   background-color: rgb(31, 33, 45);
   background-image: linear-gradient(180deg, rgb(31, 33, 45), rgb(30, 35, 39));
-  
-  /* background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='34' height='34' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform=''%3E%3Crect width='100%25' height='100%25' fill='rgba(71, 82, 91,0)'/%3E%3Ccircle cx='20' cy='20' r='2' fill='rgba(71, 82, 91,1)'/%3E%3Cpath d='M18 20aInfinityInfinity 0 0 0InfinityNaNaInfinityInfinity 0 0 0-InfinityNaN' fill='rgba(236, 201, 75,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E "); */
   font-family: "Orbitron", sans-serif;
 }
 
@@ -123,6 +119,8 @@ nav ul li:first-of-type > a {
   position: absolute;
 }
 
+/* HTML5, CSS3, JavaScript, React, NextJs, Tailwind */
+
 .box-top-left {
   border-bottom-right-radius: 6px;
   clip-path: polygon(0 28px,28px 0,100% 0,100% 100%,0 100%);
@@ -194,3 +192,104 @@ nav ul li:first-of-type > a {
 }
 
 /* end bars */
+
+
+/* card */
+
+.cards {
+  margin-top: 20px;
+  display: flex;
+  gap: 30px;
+}
+.card {
+  height: 150px;
+  width: 90px;
+  border: 2px solid rgb(250, 249, 251);
+  border-radius: 12px;
+  position: relative;
+  color: rgb(250, 249, 251);
+}
+
+.card,
+.card-box {
+  box-shadow: 0px 0px 10px 0px rgba(250, 249, 251,0.5);
+}
+
+.inner-card {
+  height: 150px;
+  width: 90px;
+  border: 2px solid rgb(252,216,135);
+  border-radius: 12px;
+  position: absolute;
+  top: -7px;
+  right: -7px;
+  color: rgb(252,216,135);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 2rem;
+}
+
+.inner-card,
+.inner-card-box {
+  /* box-shadow: -2px -2px 6px -3px rgba(252,216,135,0.9); */
+  box-shadow: 0px 0px 10px 0px rgba(252,216,135,0.5);
+}
+
+.inner-card > h4 {
+  margin-top: 4px;
+  font-size: 0.8rem;
+  text-shadow: 0px 0px 10px rgba(252,216,135,0.8);
+}
+
+/* .inner-card svg {
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px 0px rgba(252,216,135,0.5);
+} */
+
+.card-box,
+.inner-card-box {
+  position: absolute;
+  border: 2px solid rgb(250, 249, 251);
+  width: 14px;
+  border-radius: 3px;
+}
+
+.inner-card-box {
+  border-color: rgb(252,216,135);
+}
+
+.card-top-left,
+.inner-card-top-left {
+  top: 0px;
+  left: 0px;
+  height: 40px;
+  border-top-left-radius: 12px;
+}
+
+.card-top-right,
+.inner-card-top-right {
+  top: 0px;
+  right: 0px;
+  height: 40px;
+  border-top-right-radius: 12px;
+}
+
+.card-bottom-left ,
+.inner-card-bottom-left {
+  bottom: 0px;
+  left: 0px;
+  height: 20px;
+  border-bottom-left-radius: 12px;
+}
+
+.card-bottom-right,
+.inner-card-bottom-right {
+  bottom: 0px;
+  right: 0px;
+  height: 20px;
+  border-bottom-right-radius: 12px;
+}
+
+/* end Cards */
