--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,9 @@ nav ul li:first-of-type > a {
   width: 50px;
   height: 45px;
   background-color: rgb(252,216,135);
+
+  /* background-color: rgb(255, 49, 49); */
+
   border-radius: 1px;
   position: absolute;
 }
@@ -293,3 +296,87 @@ nav ul li:first-of-type > a {
 }
 
 /* end Cards */
+
+.container-blue {
+  background-color: rgba(48, 51, 86, 0.2);
+  /* filter: blur(8px);
+  -webkit-filter: blur(8px); */
+  width: 80vw;
+  height: 68vh;
+  border-radius: 3px;
+  padding: 20px;
+  clip-path: polygon(0 40px,40px 0,100% 0,100% calc(100% - 40px),calc(100% - 40px) 100%,0 100%);
+}
+
+.project {
+  display: flex;
+  /* align-items: center; */
+  /* justify-content: space-between; */
+  gap: 30px;
+  width: 100%;
+}
+
+.project-image {
+  position: relative;
+  /* flex: 1; */
+  height: 330px;
+  width: 265px;
+  max-width: 265px;
+  /* background-color: rgb(224, 182, 185); */
+  /* background-color: rgb(237, 149, 111); */
+  background-color: rgb(255, 49, 49);
+  clip-path: polygon(10% 0, 100% 0, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 95%, 0 10%);
+  /* z-index: 3; */
+}
+
+.project-image img {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  height: 328px;
+  width: 263px;
+  /* width: 100%;
+  height: 100%; */
+  clip-path: polygon(10% 0, 100% 0, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 95%, 0 10%);
+  object-fit: cover;
+}
+
+.project-image .text {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 40px;
+  /* background-color: rgba(224, 182, 185, 0.5); */
+  background-color: rgba(43, 10, 10, 0.536);
+  /* color: rgb(224, 182, 185); */
+  /* color: rgb(48, 51, 86); */
+  color: rgb(255, 49, 49);
+  padding-left: 10px;
+  padding-top: 10px;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.info {
+  color: rgb(250, 249, 251);
+  text-shadow: -2px -2px 5px rgba(250, 249, 251,0.4);
+  width: 30vw;
+}
+
+.technologies {
+  display: flex;
+  gap: 10px;
+}
+
+.code-web {
+  display: flex;
+  gap: 10px;
+}
+
+/* .info p {
+  width: 30vw;
+} */
+
+
