--- a/src/index.css
+++ b/src/index.css
@@ -40,12 +40,16 @@ nav ul {
 
 nav ul li {
   padding: 10px 34px; 
-  border: 3px solid rgba(115, 129, 160, 0.3);
+  /* border: 3px solid rgba(115, 129, 160, 0.3); */
+  border-width: 3px;
+  border-style: solid;
+  border-color: rgba(115, 129, 160, 0.3);
   border-radius: 5px;
   /* color: rgba(115, 129, 160, 0.8); */
   color: rgb(115, 129, 160);
   cursor: pointer;
   position: relative;
+  transition:  all 150ms ease-in;
 }
 
 a {
@@ -55,22 +59,25 @@ a {
   font-size: 1rem;
   letter-spacing: 5px;
   text-transform: uppercase;
+  transition:  all 150ms ease-in;
 }
 
-nav ul li:first-of-type {
+/* nav ul li:first-of-type {
   border-color: rgb(252,216,135);
-  /* color: transparent; */
+  color: transparent;
 }
 
 nav ul li:first-of-type > a {
   color: rgb(252,216,135);
-}
+} */
 
 /* inner nav boxes */
 .inner-nav-box {
   width: 28px;
   height: 22px;
-  background-color: rgb(252,216,135);
+  /* background-color: rgb(252,216,135); */
+  /* background-color: blue; */
+  background-color: rgb(115, 129, 160);
   border-radius: 1px;
   position: absolute;
   top: -4px;
@@ -78,6 +85,43 @@ nav ul li:first-of-type > a {
   clip-path: polygon(0 0,100% 0,100% 100%,12px 100%,0 calc(100% - 12px));
   border-bottom: 3px solid rgb(31, 33, 45);
   border-left: 3px solid rgb(31, 33, 45);
+  transition:  all 150ms ease-in;
+}
+
+.yellow {
+  background-color: #fcd887;
+}
+
+.yellow-border {
+  border-color: #fcd887;   
+}
+
+.yellow-text {
+  color: #fcd887;
+}
+
+.red {
+  background-color: #ff3131;
+}
+
+.red-border {
+  border-color: #ff3131;
+}
+
+.red-text {
+  color: #ff3131;
+}
+
+.turquoise {
+  background-color: #cff5f6;
+}
+
+.turquoise-border {
+  border-color: #cff5f6;
+}
+
+.turquoise-text {
+  color: #cff5f6;
 }
 
 /* end inner nav boxes */
@@ -87,8 +131,13 @@ nav ul li:first-of-type > a {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-top: 60px;
-  padding-left: 50px;
+  /* justify-content: center; */
+  /* padding-top: 60px;
+  padding-left: 50px; */
+  padding-top: 35px;
+  /* padding-left: 64px;
+  padding-right: 64px; */
+  
 }
 
 .header h1 {
@@ -100,12 +149,15 @@ nav ul li:first-of-type > a {
   letter-spacing: 5px;
   text-shadow: -2px -2px 5px rgba(172, 161, 192,0.4);
   text-shadow: -2px -2px 5px rgba(250, 249, 251,0.4);
+
+  margin-bottom: 20px;
 }
 
 .header h2 {
   color: rgb(250, 249, 251);
   text-shadow: -2px -2px 5px rgba(250, 249, 251,0.4);
   letter-spacing: 5px;
+  /* color: #cff5f6; */
 }
 /* End Header */
 
@@ -114,12 +166,13 @@ nav ul li:first-of-type > a {
 .box {
   width: 50px;
   height: 45px;
-  background-color: rgb(252,216,135);
+  /* background-color: rgb(252, 216, 135); */
 
   /* background-color: rgb(255, 49, 49); */
 
   border-radius: 1px;
   position: absolute;
+  transition: all 150ms ease-in;
 }
 
 /* HTML5, CSS3, JavaScript, React, NextJs, Tailwind */
@@ -297,15 +350,32 @@ nav ul li:first-of-type > a {
 
 /* end Cards */
 
+/* projects */
+#projects {
+  /* width: 100%; */
+  margin: 0 auto;
+}
+
 .container-blue {
   background-color: rgba(48, 51, 86, 0.2);
   /* filter: blur(8px);
   -webkit-filter: blur(8px); */
-  width: 80vw;
+  /* width: 80vw; */
+  /* width: 1210px; */
+  width: fit-content;
+  /* height: fit-content; */
   height: 68vh;
   border-radius: 3px;
   padding: 20px;
   clip-path: polygon(0 40px,40px 0,100% 0,100% calc(100% - 40px),calc(100% - 40px) 100%,0 100%);
+
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  display: grid;
+  grid-template-columns: 590px 590px;
+  gap: 50px;
+  overflow-y: scroll;
+  /* justify-content: space-evenly; */
 }
 
 .project {
@@ -313,7 +383,8 @@ nav ul li:first-of-type > a {
   /* align-items: center; */
   /* justify-content: space-between; */
   gap: 30px;
-  width: 100%;
+  /* width: 100%; */
+  width: 590px;
 }
 
 .project-image {
@@ -331,10 +402,14 @@ nav ul li:first-of-type > a {
 
 .project-image img {
   position: absolute;
-  top: 1px;
+  /* top: 1px;
   left: 1px;
   height: 328px;
-  width: 263px;
+  width: 263px; */
+  top: 2px;
+  left: 2px;
+  height: 326px;
+  width: 261px;
   /* width: 100%;
   height: 100%; */
   clip-path: polygon(10% 0, 100% 0, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 95%, 0 10%);
@@ -362,21 +437,100 @@ nav ul li:first-of-type > a {
 .info {
   color: rgb(250, 249, 251);
   text-shadow: -2px -2px 5px rgba(250, 249, 251,0.4);
-  width: 30vw;
+  width: 295px;
+  height: 330px;
+  display: flex;
+  /* align-items: flex-start; */
+  justify-content: space-between;
+  flex-direction: column;
+  /* margin-top: 20px;
+  margin-bottom: 20px; */
 }
 
 .technologies {
   display: flex;
   gap: 10px;
+  color: rgb(255, 49, 49);
+  text-shadow: -1px -1px 3px rgb(255, 49, 49);
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .code-web {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   gap: 10px;
 }
 
-/* .info p {
-  width: 30vw;
-} */
+.info h3 {
+  /* padding-top: 8px;
+  padding-bottom: 8px; */
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-top: 2px solid rgb(255, 49, 49);
+  border-bottom: 2px solid rgb(255, 49, 49);
+  color: rgb(255, 49, 49);
+  text-shadow: -1px -1px 5px rgb(255, 49, 49);
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.btn {
+  position: relative;
+  /* width: 150px;
+  height: 30px; */
+  width: 180px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  overflow: hidden;
+}
+.btn:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgb(255, 49, 49);
+  clip-path: polygon(0 12px,12px 0,100% 0,100% calc(100% - 12px),calc(100% - 12px) 100%,0 100%,0 12px,2px  calc(12px + 0.83px),2px calc(100% - 2px),calc(100% - 12px - 0.83px) calc(100% - 2px),calc(100% - 2px) calc(100% - 12px - 0.83px),calc(100% - 2px) 2px,calc(12px + 0.83px) 2px,2px calc(12px + 0.83px));
+
+}
+
+.btn span {
+  position: absolute;
+  /* top: 1px;
+  left: 1px; */
+  /* top: 0px;
+  left: 0px; */
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  font-weight: 400;
+  transition: all 150ms ease-in;
+  /* width: 148px;
+  height: 28px; */
+  width: 178px;
+  height: 38px;
+  /* background-color: blue; */
+  overflow: hidden;
+  clip-path: polygon(0 12px,12px 0,100% 0,100% calc(100% - 12px),calc(100% - 12px) 100%,0 100%);
+
+}
+
+.btn span svg {
+  box-shadow: 0px 0px 4px rgba(250, 249, 251,0.4);
+  border-radius: 50%;
+  /* color: blue; */
+}
+
+.btn:hover span {
+  /* clip-path: polygon(0 12px,12px 0,100% 0,100% calc(100% - 12px),calc(100% - 12px) 100%,0 100%,0 12px,2px  calc(12px + 0.83px),2px calc(100% - 2px),calc(100% - 12px - 0.83px) calc(100% - 2px),calc(100% - 2px) calc(100% - 12px - 0.83px),calc(100% - 2px) 2px,calc(12px + 0.83px) 2px,2px calc(12px + 0.83px)); */
+ 
+  background-color: rgba(255, 49, 49, 0.1);
+ 
+}
 
 
