--- a/src/index.css
+++ b/src/index.css
@@ -357,7 +357,11 @@ nav ul li:first-of-type > a {
 }
 
 .container-blue {
+  /* background-color: transparent; */
   background-color: rgba(48, 51, 86, 0.2);
+  /* background-color: rgb(48, 51, 86); */
+  /* overflow-x: hidden; */
+
   /* filter: blur(8px);
   -webkit-filter: blur(8px); */
   /* width: 80vw; */
@@ -376,15 +380,39 @@ nav ul li:first-of-type > a {
   gap: 50px;
   overflow-y: scroll;
   /* justify-content: space-evenly; */
+  /* filter: blur(14px);
+  -webkit-filter: blur(14px); */
+  z-index: 1;
+
+  
 }
 
-.project {
-  display: flex;
-  /* align-items: center; */
-  /* justify-content: space-between; */
-  gap: 30px;
-  /* width: 100%; */
-  width: 590px;
+/* width */
+.container-blue::-webkit-scrollbar {
+  width: 14px;
+}
+
+/* Track */
+.container-blue::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(115, 129, 160); 
+  /* background-color: rgba(115, 129, 160, 0.5); */
+  /* background-color: rgb(115, 129, 160); */
+
+}
+ 
+/* Handle */
+.container-blue::-webkit-scrollbar-thumb {
+  /* background: rgb(115, 129, 160);  */
+  /* background: rgb(46,51,85); */
+  
+  border: 1px solid white;
+  
+
+}
+
+/* Handle on hover */
+.container-blue::-webkit-scrollbar-thumb:hover {
+  background: rgb(46,51,85); 
 }
 
 .project-image {
@@ -440,11 +468,8 @@ nav ul li:first-of-type > a {
   width: 295px;
   height: 330px;
   display: flex;
-  /* align-items: flex-start; */
   justify-content: space-between;
   flex-direction: column;
-  /* margin-top: 20px;
-  margin-bottom: 20px; */
 }
 
 .technologies {
@@ -464,8 +489,6 @@ nav ul li:first-of-type > a {
 }
 
 .info h3 {
-  /* padding-top: 8px;
-  padding-bottom: 8px; */
   padding-top: 12px;
   padding-bottom: 12px;
   border-top: 2px solid rgb(255, 49, 49);
@@ -478,8 +501,6 @@ nav ul li:first-of-type > a {
 
 .btn {
   position: relative;
-  /* width: 150px;
-  height: 30px; */
   width: 180px;
   height: 40px;
   display: flex;
@@ -499,38 +520,24 @@ nav ul li:first-of-type > a {
 
 .btn span {
   position: absolute;
-  /* top: 1px;
-  left: 1px; */
-  /* top: 0px;
-  left: 0px; */
-
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 6px;
   font-weight: 400;
-  transition: all 150ms ease-in;
-  /* width: 148px;
-  height: 28px; */
   width: 178px;
   height: 38px;
-  /* background-color: blue; */
   overflow: hidden;
   clip-path: polygon(0 12px,12px 0,100% 0,100% calc(100% - 12px),calc(100% - 12px) 100%,0 100%);
-
 }
 
 .btn span svg {
   box-shadow: 0px 0px 4px rgba(250, 249, 251,0.4);
   border-radius: 50%;
-  /* color: blue; */
 }
 
 .btn:hover span {
-  /* clip-path: polygon(0 12px,12px 0,100% 0,100% calc(100% - 12px),calc(100% - 12px) 100%,0 100%,0 12px,2px  calc(12px + 0.83px),2px calc(100% - 2px),calc(100% - 12px - 0.83px) calc(100% - 2px),calc(100% - 2px) calc(100% - 12px - 0.83px),calc(100% - 2px) 2px,calc(12px + 0.83px) 2px,2px calc(12px + 0.83px)); */
- 
   background-color: rgba(255, 49, 49, 0.1);
- 
 }
 
 
