--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,6 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* margin-top: 10px; */
   padding-top: 10px;
 }
 
@@ -40,7 +39,6 @@ nav ul {
 
 nav ul li {
   padding: 10px 34px; 
-  /* border: 3px solid rgba(115, 129, 160, 0.3); */
   border-width: 3px;
   border-style: solid;
   border-color: rgba(115, 129, 160, 0.3);
@@ -62,21 +60,10 @@ a {
   transition:  all 150ms ease-in;
 }
 
-/* nav ul li:first-of-type {
-  border-color: rgb(252,216,135);
-  color: transparent;
-}
-
-nav ul li:first-of-type > a {
-  color: rgb(252,216,135);
-} */
-
 /* inner nav boxes */
 .inner-nav-box {
   width: 28px;
   height: 22px;
-  /* background-color: rgb(252,216,135); */
-  /* background-color: blue; */
   background-color: rgb(115, 129, 160);
   border-radius: 1px;
   position: absolute;
@@ -131,13 +118,7 @@ nav ul li:first-of-type > a {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  /* justify-content: center; */
-  /* padding-top: 60px;
-  padding-left: 50px; */
   padding-top: 35px;
-  /* padding-left: 64px;
-  padding-right: 64px; */
-  
 }
 
 .header h1 {
@@ -166,10 +147,6 @@ nav ul li:first-of-type > a {
 .box {
   width: 50px;
   height: 45px;
-  /* background-color: rgb(252, 216, 135); */
-
-  /* background-color: rgb(255, 49, 49); */
-
   border-radius: 1px;
   position: absolute;
   transition: all 150ms ease-in;
@@ -289,7 +266,6 @@ nav ul li:first-of-type > a {
 
 .inner-card,
 .inner-card-box {
-  /* box-shadow: -2px -2px 6px -3px rgba(252,216,135,0.9); */
   box-shadow: 0px 0px 10px 0px rgba(252,216,135,0.5);
 }
 
@@ -352,39 +328,21 @@ nav ul li:first-of-type > a {
 
 /* projects */
 #projects {
-  /* width: 100%; */
   margin: 0 auto;
 }
 
 .container-blue {
-  /* background-color: transparent; */
   background-color: rgba(48, 51, 86, 0.2);
-  /* background-color: rgb(48, 51, 86); */
-  /* overflow-x: hidden; */
-
-  /* filter: blur(8px);
-  -webkit-filter: blur(8px); */
-  /* width: 80vw; */
-  /* width: 1210px; */
   width: fit-content;
-  /* height: fit-content; */
   height: 68vh;
   border-radius: 3px;
   padding: 20px;
   clip-path: polygon(0 40px,40px 0,100% 0,100% calc(100% - 40px),calc(100% - 40px) 100%,0 100%);
-
-  /* display: flex; */
-  /* flex-wrap: wrap; */
   display: grid;
   grid-template-columns: 590px 590px;
   gap: 50px;
   overflow-y: scroll;
-  /* justify-content: space-evenly; */
-  /* filter: blur(14px);
-  -webkit-filter: blur(14px); */
   z-index: 1;
-
-  
 }
 
 /* width */
@@ -395,19 +353,11 @@ nav ul li:first-of-type > a {
 /* Track */
 .container-blue::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px rgb(115, 129, 160); 
-  /* background-color: rgba(115, 129, 160, 0.5); */
-  /* background-color: rgb(115, 129, 160); */
-
 }
  
 /* Handle */
 .container-blue::-webkit-scrollbar-thumb {
-  /* background: rgb(115, 129, 160);  */
-  /* background: rgb(46,51,85); */
-  
   border: 1px solid white;
-  
-
 }
 
 /* Handle on hover */
@@ -415,33 +365,62 @@ nav ul li:first-of-type > a {
   background: rgb(46,51,85); 
 }
 
+.project {
+  display: flex;
+  gap: 30px;
+  width: 590px;
+  z-index: 2;
+}
+
 .project-image {
   position: relative;
-  /* flex: 1; */
   height: 330px;
   width: 265px;
   max-width: 265px;
-  /* background-color: rgb(224, 182, 185); */
-  /* background-color: rgb(237, 149, 111); */
   background-color: rgb(255, 49, 49);
   clip-path: polygon(10% 0, 100% 0, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 95%, 0 10%);
-  /* z-index: 3; */
+  padding: 2px;
+}
+
+/* .stripes {
+  width:  261px;
+  height: 326px;
+  background-image: linear-gradient(180deg, #d1cacc 25%, #889094 25%, #889094 50%, #d1cacc 50%, #d1cacc 75%, #889094 75%, #889094 100%);
+  background-size: 14.00px 14.00px;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  z-index: 2;
+  opacity: 0.4;
+  clip-path: polygon(10% 0, 100% 0, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 95%, 0 10%);
+} */
+
+.image {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+  width: 261px;
+  height: 326px;
+  clip-path: polygon(10% 0, 100% 0, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 95%, 0 10%);
 }
 
 .project-image img {
-  position: absolute;
+  /* position: absolute; */
   /* top: 1px;
   left: 1px;
   height: 328px;
   width: 263px; */
-  top: 2px;
+
+
+  /* top: 2px;
   left: 2px;
   height: 326px;
-  width: 261px;
-  /* width: 100%;
-  height: 100%; */
+  width: 261px; */
+  
+  width: 100%;
+  height: 100%;
   clip-path: polygon(10% 0, 100% 0, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 95%, 0 10%);
-  object-fit: cover;
+  object-fit: fill;
 }
 
 .project-image .text {
@@ -450,10 +429,7 @@ nav ul li:first-of-type > a {
   right: 0;
   width: 100%;
   height: 40px;
-  /* background-color: rgba(224, 182, 185, 0.5); */
   background-color: rgba(43, 10, 10, 0.536);
-  /* color: rgb(224, 182, 185); */
-  /* color: rgb(48, 51, 86); */
   color: rgb(255, 49, 49);
   padding-left: 10px;
   padding-top: 10px;
@@ -468,8 +444,11 @@ nav ul li:first-of-type > a {
   width: 295px;
   height: 330px;
   display: flex;
+  /* align-items: flex-start; */
   justify-content: space-between;
   flex-direction: column;
+  /* margin-top: 20px;
+  margin-bottom: 20px; */
 }
 
 .technologies {
@@ -489,6 +468,8 @@ nav ul li:first-of-type > a {
 }
 
 .info h3 {
+  /* padding-top: 8px;
+  padding-bottom: 8px; */
   padding-top: 12px;
   padding-bottom: 12px;
   border-top: 2px solid rgb(255, 49, 49);
@@ -501,6 +482,8 @@ nav ul li:first-of-type > a {
 
 .btn {
   position: relative;
+  /* width: 150px;
+  height: 30px; */
   width: 180px;
   height: 40px;
   display: flex;
@@ -525,10 +508,14 @@ nav ul li:first-of-type > a {
   justify-content: center;
   gap: 6px;
   font-weight: 400;
+  transition: all 150ms ease-in;
+  /* width: 148px;
+  height: 28px; */
   width: 178px;
   height: 38px;
   overflow: hidden;
   clip-path: polygon(0 12px,12px 0,100% 0,100% calc(100% - 12px),calc(100% - 12px) 100%,0 100%);
+
 }
 
 .btn span svg {
