--- a/src/index.css
+++ b/src/index.css
@@ -107,14 +107,20 @@ nav ul li {
 
 .turquoise {
   background-color: #cff5f6;
+  background-color: cyan;
+  background-color: cyan;
 }
 
 .turquoise-border {
   border-color: #cff5f6;
+  border-color: cyan;
+  border-color: cyan;
 }
 
 .turquoise-text {
   color: #cff5f6;
+  color: cyan;
+  color: cyan;
 }
 
 /* end inner nav boxes */
@@ -199,18 +205,15 @@ nav ul li {
 
 .bar-top-right {
   top: 10px;
-  right: 20px;
-  width: 300px;
-  
+  right: 70px;
+  width: 290px;
   clip-path: polygon(0 0,100% 0,100% 100%,36px 100%,0 calc(100% - 36px));
-  
 }
 
 .bar-top-left {
   top: 10px;
   left: 70px;
   width: 290px;
-
   clip-path: polygon(0 0,100% 0,100% calc(100% - 36px),calc(100% - 36px) 100%,0 100%);
 }
 
@@ -219,7 +222,7 @@ nav ul li {
   height: 300px;
   clip-path: polygon(0 0,100% 0,100% 100%,36px 100%,0 calc(100% - 36px));
   right: 10px;
-  top: 80px;
+  top: 60px;
 }
 
 .bar-bottom {
@@ -353,7 +356,7 @@ nav ul li {
   background-color: rgba(48, 51, 86, 0.2);
   width: fit-content;
   /* height: 68vh; */
-  height: 73vh;
+  height: 85vh;
   border-radius: 3px;
   padding: 20px;
   clip-path: polygon(0 40px,40px 0,100% 0,100% calc(100% - 40px),calc(100% - 40px) 100%,0 100%);
@@ -361,6 +364,7 @@ nav ul li {
   grid-template-columns: 590px 590px;
   gap: 50px;
   overflow-y: scroll;
+  margin-top: 20px;
   /* z-index: 1; */
 }
 
@@ -399,6 +403,7 @@ nav ul li {
   background-color: rgb(255, 49, 49);
   clip-path: polygon(10% 0, 100% 0, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 95%, 0 10%);
   padding: 2px;
+  cursor: pointer;
 }
 
 /* .stripes {
@@ -412,6 +417,12 @@ nav ul li {
   z-index: 2;
   opacity: 0.4;
   clip-path: polygon(10% 0, 100% 0, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 95%, 0 10%);
+  transition: all 300ms ease-in;
+  cursor: pointer;
+}
+
+.stripes:hover {
+  background-image: unset;
 } */
 
 .image {
@@ -677,59 +688,218 @@ nav ul li {
   width: 400px;
 }
 #contact .contact-header {
-  color: aqua;
+  color: cyan;
   font-size: 3rem;
 }
 
 .form-container {
-  border-left: 1px solid aqua;
-  border-right: 1px solid aqua;
-  height: 400px;
-  width: 400px;
+  border-left: 1px solid cyan;
+  border-right: 1px solid cyan;
+  height: 380px;
+  width: 558px;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 
-  margin-top: 50px;
+  margin-top: 100px;
+  /* margin-bottom: 30px; */
+  margin-left: 90px;
+}
+
+/* .form-container h4 {
+  color: white;
+  font-weight: 400;
+  letter-spacing: 2px;
+} */
+
+.shape-message {
+  width: 305px;
+  height: 30px;
+  background-color: cyan;
+  position: absolute;
+  top: -35px;
+  left: 0px;
+  display: flex;
+  align-items: center;
+  padding-left: 14px;
+}
+
+.shape-message h3 {
+  color: rgb(31, 33, 45);
+  letter-spacing: 1px;
+}
+
+.shape-message-box-top {
+  width: 13px;
+  height: 17px;
+  background-color: cyan;
+  position: absolute;
+  top: 2px;
+  right: -6px;
+  transform: rotate(39deg);
+  z-index: 2;
+}
+
+.shape-message-box-middle {
+  width: 10px;
+  height: 12px;
+  background-color: cyan;
+  position: absolute;
+  top: 8px;
+  right: -10px;
+}
+
+.shape-message-box-bottom {
+  height: 14px;
+  width: 14px;
+  background-color: cyan;
+  position: absolute;
+  bottom: 3px;
+  right: -7px;
+
+  transform: rotate(45deg);
 }
 
 .shape-top-right {
   position: absolute;
-  top: -30px;
+  /* top: -30px; */
   right: 0px;
   width: 150px;
-  height: 30px;
+  /* width: 200px; */
+  width: 250px;
+  /* height: 30px; */
+  top: -15px;
+  height: 15px;
   /* background-color: rgba(0, 255, 255, 0.092); */
+  /* border-radius: 50%; */
 }
 
 .shape-top-top {
-  width: 150px;
+  width: 223px;
   height: 1px;
-  background-color: aqua;
+  background-color: cyan;
   position: absolute;
-  top: 4px;
-  right: 30px;
+  /* top: 5px; */
+  /* right: 29px; */
+  border-radius: 14px;
+
+  right: 15px;
+  /* top: 17px; */
+  top: 2px;
 }
 
 .shape-top-left {
   width: 1px;
   height: 20px;
-  background-color: aqua;
+  background-color: cyan;
   position: absolute;
   top: 2px;
-  right: 186px;
+  right: 185px;
   transform: rotate(45deg);
+  border-radius: 14px;
+
+  height: 17px;
+  right: 243px;
+  /* top: 15px; */
+  top: 0px;
+  /* right: 243px; */
 }
 
 .shape-top-right-line {
   width: 1px;
-  height: 40px;
-  background-color: aqua;
+  /* height: 40px; */
+  background-color: cyan;
   position: absolute;
-  right: 14px;
-  bottom: -8px;
+  /* right: 14px; */
+  /* bottom: -8px; */
   transform: rotate(130deg);
+  border-radius: 14px;
+  
+  height: 20px;
+  right: 7px;
+  bottom: -4px;
+}
+
+.left-line {
+  height: 1px;
+  width: 307px;
+  background-color: cyan;
+  position: absolute;
+  left: -307px;
+  /* top: 29px; */
+  border-radius: 14px;
+  top: 14px;
+}
+
+.shape-bottom-right {
+  width: 342px;
+  height: 22px;
+  /* background-color: rgba(255, 0, 0, 0.464); */
+  position: absolute;
+  right: -1px;
+  bottom: -22px;
+  /* border-right: 1px solid cyan; */
+  /* border-bottom: 1px solid cyan; */
+}
+
+.shape-bottom-bottom-right {
+  height: 22px;
+  width: 1px;
+  background-color: cyan;
+  position: absolute;
+  right: 0px;
+
+}
+
+.shape-bottom-bottom {
+  width: 342px;
+  height: 1px;
+  background-color: cyan;
+  position: absolute;
+  bottom: 0px;
+}
+
+.shape-bottom-left {
+  height: 32px;
+  width: 1px;
+  background-color: cyan;
+  transform: rotate(130deg);
+  position: absolute;
+  bottom: -5px;
+  left: -12px;
+  border-radius: 14px;
+}
+
+.left-line-bottom {
+  width: 192px;
+  height: 1px;
+  background-color: cyan;
+  position: absolute;
+  top: 0px;
+  left: -216px;
+}
+
+.barcode,
+.barcode-two {
+  color: cyan;
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
+  font-size: 0.5rem;
+}
+
+.barcode-two {
+  right: 17px;
+}
+
+.date-form {
+  color: cyan;
+  position: absolute;
+  bottom: 10px;
+  left: 12px;
+  font-size: 0.5rem;
 }
 
 
@@ -739,7 +909,7 @@ nav ul li {
 .right-bar {
   height: 180px;
   width: 5px;
-  background-color: aqua;
+  background-color: cyan;
   position: absolute;
   top: 25%;
 }
@@ -755,49 +925,57 @@ nav ul li {
 .triangle-left-bottom {
   width: 0;
   height: 0;
-  border-top: 5px solid aqua;
-  border-right: 5px solid transparent;
+  border-top: 6px solid cyan;
+  border-right: 6px solid transparent;
   position: absolute;
-  bottom: -4px;
+  left: 0px;
+  bottom: -5px;
 }
 
 .triangle-left-top {
   width: 0;
   height: 0;
-  border-bottom: 5px solid aqua;
-  border-right: 5px solid transparent;
+  border-bottom: 6px solid cyan;
+  border-right: 6px solid transparent;
   position: absolute;
-  top: -4px;
+  left: 0px;
+  top: -5px;
 }
 
 .triangle-right-top {
   width: 0;
   height: 0;
-  border-bottom: 5px solid aqua;
-  border-left: 5px solid transparent;
+  border-bottom: 6px solid cyan;
+  border-left: 6px solid transparent;
   position: absolute;
-  top: -4px;
+  right: 0px;
+  top: -5px;
 }
 
 .triangle-right-bottom {
   width: 0;
   height: 0;
-  border-top: 5px solid aqua;
-  border-left: 5px solid transparent;
+  border-top: 6px solid cyan;
+  border-left: 6px solid transparent;
   position: absolute;
-  bottom: -4px;
+  right: 0px;
+  bottom: -5px;
 }
+
+
 
 
 form {
   display: flex;
   flex-direction: column;
-  width: 340px;
+  width: 100%;
+  padding-left: 54px;
+  padding-right: 54px;
+  padding-top: 16px;
 }
 
 form label:last-of-type {
   position: relative;
-  /* width: 300px; */
   width: 100%;
   height: 100px;
   color: white;
@@ -807,8 +985,7 @@ form label:last-of-type {
 form label:first-of-type,
 form label:nth-of-type(2) {
   position: relative;
-  height: 40px;
-  /* width: 300px; */
+  height: 37px;
   width: 100%;
   margin-bottom: 16px;
 }
@@ -819,29 +996,36 @@ form label:last-of-type:before {
   content: "";
   position: absolute;
   inset: 0;
-  /* clip-path: polygon(0 0,calc(100% - 16px) 0,100% 16px,100% 100%,0 100%,0 0,2px  2px ,2px calc(100% - 2px),calc(100% - 2px) calc(100% - 2px),calc(100% - 2px) calc(16px + 0.83px),calc(100% - 16px - 0.83px) 2px,2px 2px); */
   clip-path: polygon(0 0,calc(100% - 16px) 0,100% 16px,100% 100%,0 100%,0 0,1px  1px ,1px calc(100% - 1px),calc(100% - 1px) calc(100% - 1px),calc(100% - 1px) calc(16px + 0.83px),calc(100% - 16px - 0.83px) 1px,1px 1px);
-
-  /* color: white; */
-  background-color: blue;
-
-  /* z-index: 1; */
+  background-color: cyan;
 }
 
 form input {
-  /* z-index: 3; */
-  width: 280px;
-  height: 40px;
-  /* background-color: violet; */
+  width: 100%;
+  height: 37px;
   background-color: transparent;
   border: none;
   outline: none;
   padding-left: 10px;
   color: white;
+  clip-path: polygon(0 0,calc(100% - 18px) 0,100% 18px,100% 100%,0 100%);
+  letter-spacing: 2px;
+}
+
+form input,
+form textarea {
+  transition: all 300ms ease-in;
+}
+
+form input:focus,
+form textarea:focus {
+  background-color: rgba(0, 255, 255, 0.04);
 }
 
 ::placeholder {
-  color: red;
+  color: cyan;
+  letter-spacing: 2px;
+  font-size: 0.9rem;
 }
 
 /* code the carret later */
@@ -854,13 +1038,13 @@ textarea {
   border: none;
   color: white;
   padding: 7px 10px;
+  clip-path: polygon(0 0,calc(100% - 18px) 0,100% 18px,100% 100%,0 100%);
+  letter-spacing: 2px;
 }
 
 .submit {
   position: relative;
-  /* width: 150px;
-  height: 30px; */
-  width: 240px;
+  width: 211px;
   height: 45px;
   display: flex;
   align-items: center;
@@ -878,17 +1062,9 @@ textarea {
   content: "";
   position: absolute;
   inset: 0;
-  background: rgb(255, 49, 49);
-  /* clip-path: polygon(0 0,calc(100% - 12px) 0,100% 12px,100% 100%,0 100%,0 0,2px  2px ,2px calc(100% - 2px),calc(100% - 2px) calc(100% - 2px),calc(100% - 2px) calc(12px + 0.83px),calc(100% - 12px - 0.83px) 2px,2px 2px);
-  clip-path: polygon(0 0,100% 0,100% 100%,24px 100%,0 calc(100% - 24px),0 0,2px  2px ,2px calc(100% - 24px - 0.83px),calc(24px + 0.83px) calc(100% - 2px),calc(100% - 2px) calc(100% - 2px),calc(100% - 2px) 2px,2px 2px); */
-  /* clip-path: polygon(0 0,calc(100% - 24px) 0,100% 24px,100% 100%,24px 100%,0 calc(100% - 24px),0 0,2px  2px ,2px calc(100% - 24px - 0.83px),calc(24px + 0.83px) calc(100% - 2px),calc(100% - 2px) calc(100% - 2px),calc(100% - 2px) calc(24px + 0.83px),calc(100% - 24px - 0.83px) 2px,2px 2px); */
+  background: cyan;
   overflow: hidden;
-
-  /* clip-path: polygon(0 0,calc(100% - 24px) 0,100% 24px,100% 100%,24px 100%,0 calc(100% - 24px),0 0,2px  2px ,2px calc(100% - 24px - 0.83px),calc(24px + 0.83px) calc(100% - 2px),calc(100% - 2px) calc(100% - 2px),calc(100% - 2px) calc(24px + 0.83px),calc(100% - 24px - 0.83px) 2px,2px 2px);
-  clip-path: polygon(0 0,calc(100% - 12px) 0,100% 12px,100% 100%,12px 100%,0 calc(100% - 12px),0 0,2px  2px ,2px calc(100% - 12px - 0.83px),calc(12px + 0.83px) calc(100% - 2px),calc(100% - 2px) calc(100% - 2px),calc(100% - 2px) calc(12px + 0.83px),calc(100% - 12px - 0.83px) 2px,2px 2px);
-   */
-/* clip-path: polygon(0 0,calc(100% - 12px) 0,100% 12px,100% 100%, 24px 100%,0 calc(100% - 12px),0 0,2px  2px ,2px calc(100% - 12px - 0.83px),calc(24px + 0.83px) calc(100% - 2px),calc(100% - 2px) calc(100% - 2px),calc(100% - 2px) calc(12px + 0.83px),calc(100% - 12px - 0.83px) 2px,2px 2px); */
-clip-path: polygon(0 0,calc(100% - 20px) 0,100% 20px,100% 100%,20px 100%,0 calc(100% - 20px),0 0,2px  2px ,2px calc(100% - 20px - 0.83px),calc(20px + 0.83px) calc(100% - 2px),calc(100% - 2px) calc(100% - 2px),calc(100% - 2px) calc(20px + 0.83px),calc(100% - 20px - 0.83px) 2px,2px 2px);
+  clip-path: polygon(0 0,calc(100% - 20px) 0,100% 20px,100% 100%,20px 100%,0 calc(100% - 20px),0 0,2px  2px ,2px calc(100% - 20px - 0.83px),calc(20px + 0.83px) calc(100% - 2px),calc(100% - 2px) calc(100% - 2px),calc(100% - 2px) calc(20px + 0.83px),calc(100% - 20px - 0.83px) 2px,2px 2px);
 }
 
 .submit span {
@@ -896,13 +1072,20 @@ clip-path: polygon(0 0,calc(100% - 20px) 0,100% 20px,100% 100%,20px 100%,0 calc(
   align-items: center;
   justify-content: center;
   color: white;
-  font-size: 1.1rem;
+  font-size: 1rem;
+  letter-spacing: 2px;
+  transition: all 300ms ease-in;
 }
 
 .submit:hover span {
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 255, 255, 0.418);
-
+  background-color: rgba(0, 255, 255, 0.256);
   clip-path: polygon(0 0,calc(100% - 20px) 0,100% 20px,100% 100%,20px 100%,0 calc(100% - 20px));
+}
+
+.submit span:active {
+  background-color: cyan;
+  color: rgb(31, 33, 45);
+  font-weight: 600;
 }
