--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,8 @@ nav ul li {
   flex-direction: column;
   align-items: flex-start;
   /* padding-top: 35px; */
+  /* background-color: red; */
+  height: 85vh;
 }
 
 .header h1 {
@@ -242,16 +244,46 @@ nav ul li {
   margin-top: 20px;
   display: flex;
   gap: 30px;
+
+  width: 80vw;
+  height: 80vh;
+  padding-top: 50px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+  perspective: 180px;
 }
 .card {
-  /* height: 150px;
-  width: 90px; */
-  height: 200px;
-  width: 120px;
+  height: 150px;
+  width: 90px;
+  /* height: 200px;
+  width: 120px; */
   border: 2px solid rgb(250, 249, 251);
   border-radius: 12px;
   position: relative;
   color: rgb(250, 249, 251);
+ 
+  /* transform: rotateY(45deg); */
+
+  /* transform: rotateY(0deg); */
+	/* animation: rotateAnimation 1s linear infinite; */
+
+	animation: rotateAnimation 1800ms linear infinite;
+  animation-delay: 2000ms;
+  /* animation-iteration-count: 3; */
+}
+
+
+
+@keyframes rotateAnimation {
+  0% {transform: rotateY(0deg);}
+	25% {transform: rotateY(45deg);}
+	50% {transform: rotateY(180deg);}
+	75% {transform: rotateY(225deg);}
+	100% {transform: rotateY(360deg);}
+	/* from {transform: rotateY(45deg);}
+	to {transform: rotateY(225deg);} */
 }
 
 .card,
@@ -260,10 +292,10 @@ nav ul li {
 }
 
 .inner-card {
-  /* height: 150px;
-  width: 90px; */
-  height: 200px;
-  width: 120px;
+  height: 150px;
+  width: 90px;
+  /* height: 200px;
+  width: 120px; */
   border: 2px solid rgb(252,216,135);
   border-radius: 12px;
   position: absolute;
@@ -274,8 +306,8 @@ nav ul li {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  /* font-size: 2rem; */
-  font-size: 2.5rem;
+  font-size: 2.1rem;
+  /* font-size: 2.5rem; */
 }
 
 /* .inner-card,
@@ -285,7 +317,8 @@ nav ul li {
 
 .inner-card > h4 {
   margin-top: 5px;
-  font-size: 0.8rem;
+  /* font-size: 0.8rem; */
+  font-size: 0.6rem;
   /* text-shadow: 0px 0px 10px rgba(252,216,135,0.8); */
 }
 
@@ -621,7 +654,9 @@ nav ul li {
   border-top: 2px solid rgb(255, 49, 49);
   border-bottom: 2px solid rgb(255, 49, 49);
   color: rgb(255, 49, 49);
-  text-shadow: -1px -1px 2px rgb(255, 49, 49, 0.8);
+  /* text-shadow: -1px -1px 2px rgb(255, 49, 49, 0.8); */
+  font-weight: 500;
+  text-shadow: none;
   text-align: center;
   text-transform: uppercase;
   /* box-shadow: 0px 2px 4px 0px rgba(255, 49, 49,0.2),0px -2px 4px 0px rgba(255, 49, 49,0.2); */
@@ -684,8 +719,21 @@ nav ul li {
 
 /* Contact */
 #contact {
-  height: 500px;
-  width: 400px;
+  /* height: 500px;
+  width: 400px; */
+  height: 85vh;
+  width: 100vw;
+  /* width: 80vw; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* background-color: rgba(173, 3, 255,0.5); */
+  gap: 50px;
+
+  padding-left: 44px;
+  padding-right: 44px;
+
 }
 #contact .contact-header {
   color: cyan;
@@ -703,9 +751,11 @@ nav ul li {
   justify-content: center;
   flex-direction: column;
 
-  margin-top: 100px;
+  /* margin-top: 100px; */
   /* margin-bottom: 30px; */
-  margin-left: 90px;
+  
+  
+  /* margin-left: 70px; */
 }
 
 /* .form-container h4 {
@@ -1089,3 +1139,51 @@ textarea {
   color: rgb(31, 33, 45);
   font-weight: 600;
 }
+
+
+
+
+
+
+/* world */
+.world-container {
+  width: 480px;
+  height: 470px;
+  background-color: rgba(45, 48, 84, 0.4);
+  /* margin-right: 60px; */
+  /* margin-left: 60px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1px;
+}
+
+.world-background {
+  position: relative;
+  cursor: pointer;
+}
+
+.top-background,
+.bottom-background {
+  position: absolute;
+  background-color: rgba(45, 48, 84, 0.4);
+  border-radius: 1px;
+}
+
+.top-background {
+  top: -20px;
+  right: 0px;
+  width: 200px;
+  height: 20px;
+  clip-path: polygon(0 36px,36px 0,100% 0,100% 100%,0 100%);
+}
+
+.bottom-background {
+  bottom: -15px;
+  left: 0px;
+  width: 320px;
+  height: 15px;
+  clip-path: polygon(0 0,100% 0,100% calc(100% - 36px),calc(100% - 36px) 100%,0 100%);
+}
+
+
